2012-10-30  Hirofumi Kosaka <kosaka@rworks.jp>

	* lib/PandoraFMS/Core.pm, util/pandora_manage.pl: Added
	'description' parameter to '--create_group' CLI.

2012-10-29  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/NetworkServer.pm,
	  lib/PandoraFMS/Tools.pm: Added support for custom timeouts and retries
	  to remote modules.

2012-10-24  Ramon Novoa  <rnovoa@artica.es>

	* conf/pandora_server.conf,
	  lib/PandoraFMS/Config.pm,
	  lib/PandoraFMS/DataServer.pm: Added a new configuration option to
	  make the data server process XML files in a stack instead of a queue.

2012-10-23  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Added new macros. Execute alerts after the
	  module status is updated.

2012-10-23  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm,
	  lib/PandoraFMS/Tools.pm: Added support for remote cron modules. Small
	  fixes.

2012-10-23 Dario Rodriguez <dario.rodriguez@artica.es>

	* util/recon_scripts/snmpdevices.pl: Fixed an error in snmpdevices.pl
	which has a double safe_input.

	MERGED FROM 4.0.2

2012-10-10  Junichi Satoh <junichi@rworks.jp>

	* lib/PandoraFMS/Core.pm: Fixed bug: periodic (monthly and weekly)
	planned downtime is not stopped at expected time.

2012-10-09  Sancho Lerena <slerena@artica.es>

	* util/plugin/mysql_plugin.sh: Fixed problem on composed
	name variables.

2012-10-08 Vanessa Gil <vanessa.gil@artica.es>

	* util/tool_api.pl: Added: validate events using API.

2012-10-04  Junichi Satoh <junichi@rworks.jp>

	* lib/PandoraFMS/Core.pm: Fixed unexpected execution with monthly
	planned downtime.

2012-10-03 Vanessa Gil <vanessa.gil@artica.es>

	* util/tool_api.pl: Changed format for creating events using API.

2012-10-01  Sancho Lerena <slerena@artica.es>

	* util/pandora_manage.pl: Fixed problem in CLI enabling the eacl from
	command line. Function name was old and not working.

2012-09-28  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Tools.pm: Fixed an SQL query.
